kube-vision-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-vision
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-vision
  namespace: kube-vision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-vision
  template:
    metadata:
      labels:
        app: kube-vision
    spec:
      serviceAccountName: kube-vision
      containers:
        - name: backend
          image: orkunincili/kube-vision-be:v0.1.0
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
        - name: frontend
          image: orkunincili/kube-vision-fe:v0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-frontend
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: kube-vision
  namespace: kube-vision
spec:
  selector:
    app: kube-vision
  ports:
    - name: http
      port: 80
      targetPort: 3000
