kube-vision-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-vision
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-vision
  template:
    metadata:
      labels:
        app: kube-vision
    spec:
      serviceAccountName: kube-vision
      containers:
        - name: backend
          image: orkunincili/kube-vision-be:v0.0.2
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
        - name: frontend
          image: orkunincili/kube-vision-fe:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-frontend
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kube-vision
  namespace: default
spec:
  selector:
    app: kube-vision
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-vision
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: kube-vision.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-vision
                port:
                  number: 80
